<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">活点地图</string>
    <string name="locate_func">我在哪里</string>
    <string name="action_settings">Settings</string>
    <string name="sensor_title">SensorDemo</string>
    <string name="Record">慧天地8F</string>
    <string name="btnRefresh">刷新</string>
    <string name="btnRecord">储存</string>
    <string name="btnExit">退出</string>
    <string name="btnSensor">传感器</string>
    <string name="btnDrawtest">画图测试</string>
    <string name="btnLocate">定位</string>
    <string name="time">Time:</string>
    <color name="lightgreen">#0fbf79</color>
    <string name="title_activity_sensor">SensorActivity</string>

</resources>
