<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/Record" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnRefresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnRefresh"
			android:textSize="20sp" />

		<Button
			android:id="@+id/btnRecord"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnRecord"
			android:textSize="20sp" />
		<Button
			android:id="@+id/btnLocate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnLocate"
			android:textColor="@color/lightgreen"
			android:textSize="20sp" />
		<Button
			android:id="@+id/btnExit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btnExit"
			android:textSize="20sp" />
		<!--<Button-->
			<!--android:layout_width="wrap_content"-->
			<!--android:layout_height="wrap_content"-->
			<!--android:id="@+id/startservice1"-->
			<!--android:text="Start Services"-->
			<!--android:onClick="startService" />-->

		<!--<Button-->
			<!--android:layout_width="wrap_content"-->
			<!--android:layout_height="wrap_content"-->
			<!--android:text="Stop Services"-->
			<!--android:id="@+id/stopservice1"-->
			<!--android:onClick="stopService" />-->
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button2"
			android:text="Add Name"
			android:onClick="onClickAddName"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText" />
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/editText2"
			android:hint="Name"
			android:textColorHint="@android:color/holo_blue_light" />

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/editText3"
			android:hint="Grade"
			android:textColorHint="@android:color/holo_blue_bright" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Retreive"
			android:id="@+id/btnretrieve"
			android:onClick="onClickRetrieveStudents"/>
	</LinearLayout>

	<TextView
	    android:id="@+id/txtTime"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/time" />
	<ListView
		android:id="@+id/listResult"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:lines="4"
		android:textSize="10sp"/>
		    
</LinearLayout>
